feat: added constrains and operations for fuzzy

--- a/src/operations/CX-play-store.ipynb
+++ b/src/operations/CX-play-store.ipynb
@@ -147,6 +147,7 @@
     }
    ],
    "source": [
+    "CUSTOMER APP\n",
     "str=\"\"\"<https://watch.appfollow.io/apps/my-first-workspace/integrations/56176?tab=slack&amp;utm_source=review&amp;utm_campaign=Google+Play&amp;utm_medium=slack&amp;autologin=236483:6dd94a831e70ab4a3f8a31124bf614eb4ff51f0982985098c077acb9ccd0325c:1650533047&amp;t=r|CityMall Customer - हर दिन सही दाम>\n",
     "Google Play, City Mall Live\n",
     "\n",
@@ -156,15 +157,75 @@
     "str=str.split(\" \")\n",
     "print(str)\n",
     "app_name=str[1] #Customer or Leader\n",
-    "if customer:\n",
+    "\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "33350b8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<https://watch.appfollow.io/apps/my-first-workspace/integrations/56177?utm_medium=slack&amp;utm_source=review&amp;utm_campaign=Google+Play&amp;tab=slack&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Leader', 'App', '-', 'आपकी', 'दुकान,', 'आपकी', 'पहचान>\\nGoogle', 'Play,', 'City', 'Mall', 'Live\\n\\n★☆☆☆☆', 'English\\nCommission', 'nahi', 'milta', 'ek', 'do', 'baar', 'se', 'jayada\\n_by_', '<https://www.google.com/search?q=%22Dharmendra+Kumar%22|Dharmendra', 'Kumar>', '_for', 'v1.42.0', '()', '–_', '', '', '·', '<https://watch.appfollow.io/apps/my-first-workspace/reviews/56177?review_id=904984692&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=reply&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Reply>', '·', '<https://appfollow.io/gp/10557/review/904984692?s=global4&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=permalink|Permalink>', '·', '<https://appfollow.io/gp/10557/review/904984692?s=global4&amp;action=translate&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=translate|Translate>', '·', '<https://watch.appfollow.io/apps/my-first-workspace/reviews/56177?review_id=904984692&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=add_tag&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Add', 'tag>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LEADER APP\n",
+    "\n",
+    "str2=\"\"\"<https://watch.appfollow.io/apps/my-first-workspace/integrations/56177?utm_medium=slack&amp;utm_source=review&amp;utm_campaign=Google+Play&amp;tab=slack&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Leader App - आपकी दुकान, आपकी पहचान>\n",
+    "Google Play, City Mall Live\n",
+    "\n",
+    "★☆☆☆☆ English\n",
+    "Commission nahi milta ek do baar se jayada\n",
+    "_by_ <https://www.google.com/search?q=%22Dharmendra+Kumar%22|Dharmendra Kumar> _for v1.42.0 () –_   · <https://watch.appfollow.io/apps/my-first-workspace/reviews/56177?review_id=904984692&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=reply&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Reply> · <https://appfollow.io/gp/10557/review/904984692?s=global4&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=permalink|Permalink> · <https://appfollow.io/gp/10557/review/904984692?s=global4&amp;action=translate&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=translate|Translate> · <https://watch.appfollow.io/apps/my-first-workspace/reviews/56177?review_id=904984692&amp;utm_medium=slack&amp;utm_source=reviews&amp;utm_campaign=add_tag&amp;autologin=236483:8d034b41de458060897d50015fa2f064c1f8201c52c82314a4b2387878234bdb:1650443768&amp;t=r|Add tag>\"\"\"\n",
+    "\n",
+    "str2=str2.split(\" \")\n",
+    "print(str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "09f23653",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<https://www.google.com/search?q=%22Dharmendra+Kumar%22|Dharmendra\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# for idx, data in enumerate(str2):\n",
+    "#     returned_value=re.match(\"<https://www.google.com/search?q=%*%22|\",data)\n",
+    "data=str2[19]\n",
+    "print(data)\n",
+    "returned_value=re.search(r\"<https://www.google.com/search\\?\\\",data, re.IGNORECASE)\n",
+    "print(returned_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d715d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
