fix: timeout error handeled

--- a/src/operations/CL-play-store.ipynb
+++ b/src/operations/CL-play-store.ipynb
@@ -2,23 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2f1aed26",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/1f/4v0r_xh52rx8ndptwyyvqd680000gn/T/ipykernel_90768/1462598518.py:4: DtypeWarning: Columns (0,2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df=pd.read_csv('data_cl.csv')\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "The Jupyter notebook server failed to launch in time. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append('/home/ubuntu/prakshal_mehra')\n",
+    "from helper import *\n",
+    "from import_modules import *\n",
+    "from datetime import datetime\n",
+    "import csv\n",
     "import numpy as np\n",
     "from thefuzz import fuzz\n",
+    "\n",
+    "df_cl=get_data_cmdb(\n",
+    "        \"\"\"\n",
+    "        select\n",
+    "        o.user_id, tl.name, tl.phone_number, o.order_status, o.processing_at \n",
+    "        from orders o join team_leaders tl on tl.id = o.team_leader \n",
+    "        where o.processing_at > now() - interval '10 days' ORDER BY o.processing_at DESC;\n",
+    "        \"\"\"\n",
+    "       \n",
+    "    )\n",
+    "    \n",
+    "with open('/Users/prakshalm/Documents/cityMall/play-store-review/src/operations/data_cl.csv','w') as f_cl:\n",
+    "    writer = csv.writer(f_cl)\n",
+    "    writer.writerow(time)\n",
+    "    f_cl.close()\n",
+    "df_cl.to_csv('/Users/prakshalm/Documents/cityMall/play-store-review/src/operations/data_cl.csv', mode='a', index=False, header=True)\n",
+    "\n",
     "df=pd.read_csv('data_cl.csv')\n"
    ]
   },
@@ -51,34 +75,74 @@
     }
    ],
    "source": [
-    "length=df.shape[0]\n",
-    "df_name=df['name']\n",
-    "print(df_name)"
+    "def removeDuplicates(lst):\n",
+    "    '''\n",
+    "    Removes Duplicate values and appends the user_id of the entries having same phone number\n",
+    "    '''\n",
+    "    seen = []\n",
+    "    Output = []\n",
+    "    for a, b, c, d in lst:\n",
+    "        if [a,b,c] not in seen:\n",
+    "            seen.append([a,b,c])\n",
+    "            Output.append([a, b, c, d])\n",
+    "\n",
+    "    seen = []\n",
+    "    removed_Duplicate = []\n",
+    "    for a, b, c, d in Output:\n",
+    "        if c not in seen:\n",
+    "            seen.append(c)\n",
+    "            removed_Duplicate.append([a, b, c, d])\n",
+    "        else:\n",
+    "            index=seen.index(c)\n",
+    "            removed_Duplicate[index][1]=str(removed_Duplicate[index][1])+','+str(b)\n",
+    "            \n",
+    "    return removed_Duplicate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1923d91e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "The Jupyter notebook server failed to launch in time. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "def removeDuplicates(lst):\n",
-    "      \n",
-    "    return list(set([i for i in lst]))\n",
-    "\n",
-    "def removeDuplicatesPhone(lst):\n",
-    "    seen = ()\n",
-    "    Output = []\n",
-    "    for a, b, c in lst:\n",
-    "        if not c in seen:\n",
-    "            seen.append(c)\n",
-    "            Output.append([a, b, c])\n",
+    "import pandas as pd\n",
+    "def get_cl_data(user_to_search:str,threshold=95):\n",
+    "    if(threshold>80):\n",
+    "        print('Searching in cl.csv')\n",
+    "        df=pd.read_csv('./operations/data_cl.csv',skiprows=1)\n",
+    "        length=df.shape[0]\n",
+    "        user_info=list()\n",
+    "        for i in range(length):\n",
+    "            if(fuzz.ratio(str(df['name'][i]).lower(),user_to_search.lower())>threshold):\n",
+    "                user_info.append((df['name'][i],df['user_id'][i],df['phone_number'][i],df['processing_at'][i]))\n",
+    "        user_info=removeDuplicates(user_info)\n",
+    "        user_info_df=pd.DataFrame(user_info)\n",
+    "        user_info_df.rename(columns = {0:'Name',1:'user_id',2:'phone_number',3:'Processing At'}, inplace = True)\n",
+    "        if user_info_df.shape[0]>=1:\n",
+    "            user_info_df=user_info_df.sort_values(by=['Processing At']).head(11)\n",
+    "            user_info_df= user_info_df.drop(\"Processing At\",axis=1)\n",
+    "            print('Searched in cl.csv')\n",
+    "            print(user_info_df)\n",
+    "            user_info_df=user_info_df.reindex()\n",
+    "            return user_info_df\n",
     "        else:\n",
-    "            index=seen.index(c)\n",
-    "            Output[index][1]=str(Output[index][1])+','+str(b)\n",
-    "            \n",
-    "    return Output\n"
+    "            print(user_info_df)\n",
+    "            res=get_cl_data(user_to_search,threshold-5)\n",
+    "            return res\n",
+    "    else:\n",
+    "        return \"No user Found\""
    ]
   },
   {
@@ -100,14 +164,9 @@
     }
    ],
    "source": [
-    "user_info=list()\n",
-    "for i in range(length):\n",
-    "    if(fuzz.ratio(str(df_name[i]).lower(),'MOHD'.lower())>0):\n",
-    "        user_info.append((df_name[i],df['user_id'][i],df['phone_number'][i]))\n",
-    "user_info=removeDuplicates(user_info)\n",
-    "user_info=removeDuplicatesPhone(user_info)\n",
-    "user_info_df=pd.DataFrame(user_info)\n",
-    "user_info_df.rename(columns = {0:'Name',1:'user_id',2:'phone_number'}, inplace = True)"
+    "userName='Meenu'\n",
+    "res=get_cl_data(userName)\n",
+    "print(res)"
    ]
   },
   {
@@ -125,7 +184,7 @@
     }
    ],
    "source": [
-    "print(user_info)"
+    "print(res)"
    ]
   },
   {
@@ -207,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
